EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/16/2009==
Trevius: New Commands added: #face, #helm, #hair, #haircolor, #beard, #beardcolor, #heritage, #tattoo, #details
Trevius: Adjusted the #fixmob command to use all features.  The new format is "#fixmob featurename prev/next"
Trevius: Corrected the R524 optional SQL file

==05/16/2009==
Trevius: (Shendare) Added armor tinting functionality for NPCs by setting it in the npc_types table
Trevius: Added base support for illusions to use all facial features, but functionality still needs to be added.
Derision: Reverted (Minimum 3% chance to proc from weapon proc buffs)
KLS: Reduced chance to hit for min damage with AC.
KLS: Added AC scaling by level, will put it in a rule soon.
KLS: Enabled both petition window 'p' and pvp window 'ctrl p' on titanium/sof; neither are functional but they're enabled now and we can work on that later.
Congdar: Bots - fix compile error and update to current combat code
Congdar: Bots - fix pet exploit
KLS: Added backward compatibility to older corpses.

==05/15/2009==
Trevius: (Trevius/Shendare) Swapped Beardcolor and Beard in the spawn struct for Titanium and Titanium Facial Features should be finalized now.
Trevius: SoF - Drakkin Specific Features (Heritage, Tattoo and Details) should now be fully functional for NPCs and PCs
Derision: Minimum 3% chance to proc from weapon proc buffs (e.g. vampiric embrace, call of sky etc.)
Trevius: Added encode for Illusion packets in Titanium so they see Drakkin as human after clicking off an illusion
Trevius: Optional SQL for adding a notes field to the rule_values table with notes from ruletypes.h

Required SQL: .\utils\sql\svn\518_drakkin_npc_type_features.sql
Optional SQL: .\utils\sql\svn\524_rule_values_notes.sql

==05/14/2009==
Trevius: More work on Facial Features for Characters. Trying to get them functioning properly without hacks before adding SoF Features.