@@ -1,6 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
-==05/16/2009==
+==05/19/2009==
+Trevius: Identified hairstyle, haircolor, beard, and beardcolor in the Titanium Illusion struct so the related commands now work in Titanium.
+
+==05/18/2009==
 Trevius: New Commands added: #face, #helm, #hair, #haircolor, #beard, #beardcolor, #heritage, #tattoo, #details
 Trevius: Adjusted the #fixmob command to use all features.  The new format is "#fixmob featurename prev/next"
 Trevius: Corrected the R524 optional SQL file
